# stin-weather

./: .gitignore  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
front/: data_handler.py  decorators.py  errors.py  models.py  urls.py  user_handling.py  views.py
front/migrations/: 0001_initial.py  0002_favouritelocation_name.py  0002_weatheruser_paying.py
front/templates/front/: base.html  favourites.html  index.html  location_detail.html  login.html  payment.html  signup.html
tests/: test_data_handler.py  test_front_urls.py  test_index_view.py  test_views.py
weather/: api.py  schemas.py  settings.py  urls.py  wsgi.py
weather/tests/: test_auth.py  test_data_handler.py  test_signup.py  test_user_handling.py  test_views.py
