[tool.poetry]
name = "stin-weather"
version = "0.1.0"
description = ""
authors = ["Denis Tauchman <denis.tauchman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
requests = "^2.31.0"
django-environ = "^0.11.2"
pydantic = "^2.6.4"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"
whitenoise = "^6.6.0"
django-ninja = "^1.1.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
